@@ -1,3 +1,8 @@
+2014-06-21  Rene Liebscher <R.Liebscher@gmx.de>
+
+	patch #8419 fix ftdi_syncbb hang with libftdi 1
+	* ft245r.c: set pthread cancel type to asynchronous, reorder ftdi_usb_close/deinit
+
 2014-06-17  Rene Liebscher <R.Liebscher@gmx.de>
 
 	* avrftdi_private.h: added missing msg level for avrdude_message 
